--- a/perfeed/notebooks/weekly_summary_demo.ipynb
+++ b/perfeed/notebooks/weekly_summary_demo.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1209,11 +1209,12 @@
     }
    ],
    "source": [
+    "fs = FeatherStorage(data_type=\"pr_summary\", overwrite=False, append=True)\n",
     "summarizer = PRSummarizer(\n",
     "    GithubProvider(\"Perfeed\"), \n",
-    "    llm=OpenAIClient(\"gpt-4o-mini\")\n",
-    "    # llm=OllamaClient(\"llama3.1\")\n",
-    ")\n",
+    "    llm=OpenAIClient(\"gpt-4o-mini\"),\n",
+    "    # llm=OllamaClient(\"llama3.1\"),\n",
+    "    store=fs)\n",
     "pr_summary, metadata = asyncio.run(summarizer.run(\"perfeed\", 22))"
    ]
   },
@@ -1376,18 +1377,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_name = \"llama3.1\"\n",
     "llm = OllamaClient(model_name)\n",
+    "fs = FeatherStorage(data_type=\"pr_summary\", overwrite=False, append=True)\n",
     "\n",
     "summarizer = PRSummarizer(\n",
     "    GithubProvider(\"Perfeed\"), \n",
-    "    llm=llm\n",
+    "    llm=llm,\n",
+    "    store=fs\n",
     ")\n",
-    "fs = FeatherStorage(data_type=\"pr_summary\", overwrite=False, append=True)\n",
     "# for pr in [11, 12, 13, 14]:\n",
     "#     pr_summary, metadata = asyncio.run(summarizer.run(\"perfeed\", pr))\n",
     "#     fs.save(data=pr_summary, metadata=metadata)"
