--- a/perfeed/notebooks/weekly_summary.ipynb
+++ b/perfeed/notebooks/weekly_summary.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "936e879cf0513385",
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-20T03:29:22.852691Z",
+     "start_time": "2024-11-20T03:29:22.849742Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from perfeed.tools.pr_summarizer import PRSummarizer\n",
@@ -13,42 +22,41 @@
     "import asyncio\n",
     "import nest_asyncio\n",
     "nest_asyncio.apply()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-20T03:04:46.415887Z",
-     "start_time": "2024-11-20T03:04:45.470340Z"
-    }
-   },
-   "id": "936e879cf0513385",
-   "execution_count": 1
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "348b50e03fb32243",
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-20T03:29:23.095236Z",
+     "start_time": "2024-11-20T03:29:23.093081Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# User Setup\n",
     "organization_name = \"Perfeed\"\n",
     "repo_name = \"perfeed\"\n",
     "users = [\"jzxcd\"]\n",
-    "start_of_week = \"2024-10-31\"\n",
+    "start_of_week = \"2024-10-21\"\n",
     "model_name = \"llama3.1\""
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "348b50e03fb32243"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "ExecuteTime": {
-     "end_time": "2024-11-20T03:04:46.437019Z",
-     "start_time": "2024-11-20T03:04:46.416814Z"
+     "end_time": "2024-11-20T03:29:23.354025Z",
+     "start_time": "2024-11-20T03:29:23.332803Z"
     }
    },
    "outputs": [],
@@ -61,18 +69,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "13af1e985b72578e",
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-20T03:30:25.060416Z",
+     "start_time": "2024-11-20T03:29:23.953647Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[32m2024-11-19 19:04:47.888\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.weekly_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m38\u001B[0m - \u001B[1mSummarizing perfeed for ['jzxcd'] from 2024-10-21 00:00:00-07:00 to 2024-10-27 00:00:00-07:00\u001B[0m\n",
-      "\u001B[32m2024-11-19 19:04:49.002\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.weekly_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m48\u001B[0m - \u001B[1mSummarizing the following PR-[14, 13]\u001B[0m\n",
-      "\u001B[32m2024-11-19 19:04:49.002\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.pr_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m29\u001B[0m - \u001B[1mSummarizing perfeed#14\u001B[0m\n",
-      "\u001B[32m2024-11-19 19:04:49.012\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.pr_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m50\u001B[0m - \u001B[1mLoaded perfeed#14 from store\u001B[0m\n",
-      "\u001B[32m2024-11-19 19:04:49.013\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.pr_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m29\u001B[0m - \u001B[1mSummarizing perfeed#13\u001B[0m\n",
-      "\u001B[32m2024-11-19 19:04:49.016\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.pr_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m50\u001B[0m - \u001B[1mLoaded perfeed#13 from store\u001B[0m\n",
-      "\u001B[32m2024-11-19 19:04:49.017\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.weekly_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m62\u001B[0m - \u001B[1mSummarized 2 PRs in 1.12837 seconds\u001B[0m\n"
+      "\u001B[32m2024-11-19 19:29:23.955\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.weekly_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m38\u001B[0m - \u001B[1mSummarizing perfeed for ['jzxcd'] from 2024-10-21 00:00:00-07:00 to 2024-10-27 00:00:00-07:00\u001B[0m\n",
+      "\u001B[32m2024-11-19 19:29:24.742\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.weekly_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m48\u001B[0m - \u001B[1mSummarizing the following PR-[14, 13]\u001B[0m\n",
+      "\u001B[32m2024-11-19 19:29:24.743\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.pr_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m29\u001B[0m - \u001B[1mSummarizing perfeed#14\u001B[0m\n",
+      "\u001B[32m2024-11-19 19:29:24.760\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.pr_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m50\u001B[0m - \u001B[1mLoaded perfeed#14 from store\u001B[0m\n",
+      "\u001B[32m2024-11-19 19:29:24.760\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.pr_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m29\u001B[0m - \u001B[1mSummarizing perfeed#13\u001B[0m\n",
+      "\u001B[32m2024-11-19 19:29:24.763\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.pr_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m50\u001B[0m - \u001B[1mLoaded perfeed#13 from store\u001B[0m\n",
+      "\u001B[32m2024-11-19 19:29:24.764\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.weekly_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m62\u001B[0m - \u001B[1mSummarized 2 PRs in 0.80747 seconds\u001B[0m\n"
      ]
     },
     {
@@ -93,44 +110,36 @@
     "        start_of_week=start_of_week,\n",
     "    )\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-20T03:05:37.270245Z",
-     "start_time": "2024-11-20T03:04:47.886046Z"
-    }
-   },
-   "id": "13af1e985b72578e",
-   "execution_count": 3
+   ]
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [],
+   "execution_count": null,
+   "id": "b1d4196e892f8f59",
    "metadata": {
     "collapsed": false
    },
-   "id": "b1d4196e892f8f59"
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
