set default model value in client. replace the output with gpt4omini

--- a/perfeed/notebooks/weekly_summary.ipynb
+++ b/perfeed/notebooks/weekly_summary.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "936e879cf0513385",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-20T03:29:22.852691Z",
-     "start_time": "2024-11-20T03:29:22.849742Z"
+     "end_time": "2024-11-20T03:51:04.096997Z",
+     "start_time": "2024-11-20T03:51:03.383456Z"
     }
    },
    "outputs": [],
@@ -26,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "348b50e03fb32243",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-20T03:29:23.095236Z",
-     "start_time": "2024-11-20T03:29:23.093081Z"
+     "end_time": "2024-11-20T03:51:04.099540Z",
+     "start_time": "2024-11-20T03:51:04.097772Z"
     }
    },
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
@@ -55,13 +55,14 @@
      "outputs_hidden": true
     },
     "ExecuteTime": {
-     "end_time": "2024-11-20T03:29:23.354025Z",
-     "start_time": "2024-11-20T03:29:23.332803Z"
+     "end_time": "2024-11-20T03:51:05.670123Z",
+     "start_time": "2024-11-20T03:51:05.623628Z"
     }
    },
    "outputs": [],
    "source": [
-    "llm = OllamaClient(model_name)\n",
+    "# llm = OllamaClient() # model default to be llama3.1\n",
+    "llm = OpenAIClient()  # model default to be gpt-4o-mini\n",
     "git = GithubProvider(organization_name)\n",
     "store = FeatherStorage(data_type=\"pr_summary\", overwrite=False, append=True)\n",
     "summarizer = PRSummarizer(git=git, llm=llm, store=store)"
@@ -69,13 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "13af1e985b72578e",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-20T03:30:25.060416Z",
-     "start_time": "2024-11-20T03:29:23.953647Z"
+     "end_time": "2024-11-20T03:51:39.643747Z",
+     "start_time": "2024-11-20T03:51:10.264593Z"
     }
    },
    "outputs": [
@@ -83,19 +84,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[32m2024-11-19 19:29:23.955\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.weekly_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m38\u001B[0m - \u001B[1mSummarizing perfeed for ['jzxcd'] from 2024-10-21 00:00:00-07:00 to 2024-10-27 00:00:00-07:00\u001B[0m\n",
-      "\u001B[32m2024-11-19 19:29:24.742\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.weekly_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m48\u001B[0m - \u001B[1mSummarizing the following PR-[14, 13]\u001B[0m\n",
-      "\u001B[32m2024-11-19 19:29:24.743\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.pr_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m29\u001B[0m - \u001B[1mSummarizing perfeed#14\u001B[0m\n",
-      "\u001B[32m2024-11-19 19:29:24.760\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.pr_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m50\u001B[0m - \u001B[1mLoaded perfeed#14 from store\u001B[0m\n",
-      "\u001B[32m2024-11-19 19:29:24.760\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.pr_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m29\u001B[0m - \u001B[1mSummarizing perfeed#13\u001B[0m\n",
-      "\u001B[32m2024-11-19 19:29:24.763\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.pr_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m50\u001B[0m - \u001B[1mLoaded perfeed#13 from store\u001B[0m\n",
-      "\u001B[32m2024-11-19 19:29:24.764\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.weekly_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m62\u001B[0m - \u001B[1mSummarized 2 PRs in 0.80747 seconds\u001B[0m\n"
+      "\u001B[32m2024-11-19 19:51:10.266\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.weekly_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m38\u001B[0m - \u001B[1mSummarizing perfeed for ['jzxcd'] from 2024-10-21 00:00:00-07:00 to 2024-10-27 00:00:00-07:00\u001B[0m\n",
+      "\u001B[32m2024-11-19 19:51:11.055\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.weekly_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m48\u001B[0m - \u001B[1mSummarizing the following PR-[14, 13]\u001B[0m\n",
+      "\u001B[32m2024-11-19 19:51:11.056\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.pr_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m29\u001B[0m - \u001B[1mSummarizing perfeed#14\u001B[0m\n",
+      "\u001B[32m2024-11-19 19:51:11.069\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.pr_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m29\u001B[0m - \u001B[1mSummarizing perfeed#13\u001B[0m\n",
+      "\u001B[32m2024-11-19 19:51:33.406\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.weekly_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m62\u001B[0m - \u001B[1mSummarized 2 PRs in 23.13765 seconds\u001B[0m\n"
      ]
     },
     {
      "data": {
       "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "Here's the summary of the pull requests:\n\n**Overview**\nJohn merged 2 PRs this week - one is a documentary/bug fix and the other one is a feature enhancement.\n\n### Significant Changes\n- **Bug Fix**: updated PRSummarizer for correct return types across the codebase.\n- **Enhancement**: Added BaseGitProvider to enable support for multiple implementations beyond GitHub and refactored the GitHubProvider to use asynchronous calls for improved concurrency.\n\n### Refactors/Architecture\n- Deprecated the get_patch method in favor of direct API calls to diff_url.\n- Removed an unused GithubProvider class, streamlining the architecture.\n\n### Review Process\n- For the bug fix, colb157 suggested adding a docstring to the renamed PRSummary class. This was implemented, improving clarity for future developers.\n- For the enhancement, there was a request from luizz44 to split the async refactor and the addition of the base provider into separate PRs for easier review. The author successfully declined this ask, justifying that the changes were tightly coupled and provided adequate testing documentation to support the combined PR.\n- Both PRs were merged within ~12 hours and ~27 hours of submission after addressing feedback.\n\n---\n\n**PR 1: Datastore**\n\n### Overview\nAdded support for feather and SQL DB storage. Also added save and load functionality.\n\n### Significant Changes\n- Added BaseStorage class to perfeed/data_stores, enabling extensibility.\n- Added FeatherStorage and SQLStorage classes to perfeed/data_stores, supporting multiple implementations.\n- Refactored API handler logic to separate concerns, improving maintainability.\n\n### Related Files\n- Modified .gitignore to include _data.\n- Updated perfeed/data_stores/__init__.py to include __init__.py file for data stores module.\n- Added main function to perfeed/data_stores/main.py.\n\n### Review Process\n- Discussion about keeping async function and using PRSummarizer.run() to invoke it led to a code change, where the async function was kept and PRSummarizer.run() was used to invoke it.\n- Discussion about the purpose of PRSummaryMetadata class led to a code change, where the PRSummaryMetadata class was added.\n- Discussion about the need for self.provider in OllamaClient class led to a code change, where self.provider was added to OllamaClient class.\n- Discussion about the need for DataStore class led to a code change, where the DataStore class was removed.\n- Discussion about the return type of load function led to a code change, where the return type of load function was changed.\n\n---\n\n**PR 2: Datastore**\n\n### Overview\nAdded support for feather and SQL DB storage. Also added save and load functionality.\n\n### Significant Changes\n- Added BaseStorage class to perfeed/data_stores, enabling extensibility.\n- Added FeatherStorage and SQLStorage classes to perfeed/data_stores, supporting multiple implementations.\n- Refactored API handler logic to separate concerns, improving maintainability.\n\n### Related Files\n- Modified .gitignore to include _data.\n- Updated perfeed/data_stores/__init__.py to include __init__.py file for data stores module.\n- Added main function to perfeed/data_stores/main.py.\n\n### Review Process\n- Discussion about keeping async function and using PRSummarizer.run() to invoke it led to a code change, where the async function was kept and PRSummarizer.run() was used to invoke it.\n- Discussion about the purpose of PRSummaryMetadata class led to a code change, where the PRSummaryMetadata class was added.\n- Discussion about the need for self.provider in OllamaClient class led to a code change, where self.provider was added to OllamaClient class.\n- Discussion about the need for DataStore class led to a code change, where the DataStore class was removed.\n- Discussion about the return type of load function led to a code change, where the return type of load function was changed.\n\n---\n\nNote: The above summary is based on the provided PRSummary data. If there are any discrepancies or inaccuracies, please let me know and I'll be happy to correct them."
+      "text/markdown": "This week, the team merged 2 PRs focused on enhancements to the data storage and PR summarization functionalities.\n\nOverview:\n- The first PR introduced a new data storage system that supports both Feather and SQL databases, allowing for the saving and loading of PR summaries with validation and dataframe conversion capabilities. The second PR enhanced the `pr_summarizer` by implementing asynchronous execution and improving JSON output formatting.\n\n---\n\nSignificant Changes:\n- **Data Storage Enhancement**: \n  - Introduced a new base storage class and specific handlers for Feather and SQL databases.\n  - Added functionality for saving and loading PR summaries, along with a new data model for PR summary metadata.\n- **PR Summarizer Enhancement**: \n  - Updated the `PRSummarizer` class to support asynchronous execution.\n  - Improved JSON output handling through the introduction of a new utility function.\n\n---\n\nRefactors/Architecture:\n- Created an abstract base class for storage handlers, enhancing the modularity of the data storage system.\n- Restructured utility functions in the `pr_summarizer` to include a dedicated JSON output curator, improving code organization and clarity.\n\n---\n\nReview Process:\n- In the first PR, discussions arose regarding the async nature of the `run` method, leading to clarifications on its implementation. Additionally, the necessity of the `PRSummaryMetadata` class was questioned, but no immediate action was required as documentation was suggested.\n- The second PR did not have any comments or discussions, indicating a smooth review process.\n- Both PRs were merged after addressing feedback, showcasing effective collaboration and timely integration of enhancements."
      },
      "metadata": {},
      "output_type": "display_data"
@@ -114,13 +113,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b1d4196e892f8f59",
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "id": "19e6f0da245ecafc"
   }
  ],
  "metadata": {
