another attempt to fix notebook in github

--- a/perfeed/notebooks/weekly_summary.ipynb
+++ b/perfeed/notebooks/weekly_summary.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-20T03:51:04.096997Z",
-     "start_time": "2024-11-20T03:51:03.383456Z"
+     "end_time": "2024-11-20T04:07:57.170319Z",
+     "start_time": "2024-11-20T04:07:56.540961Z"
     }
    },
    "outputs": [],
@@ -31,8 +31,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-20T03:51:04.099540Z",
-     "start_time": "2024-11-20T03:51:04.097772Z"
+     "end_time": "2024-11-20T04:07:57.172936Z",
+     "start_time": "2024-11-20T04:07:57.171207Z"
     }
    },
    "outputs": [],
@@ -40,9 +40,9 @@
     "# User Setup\n",
     "organization_name = \"Perfeed\"\n",
     "repo_name = \"perfeed\"\n",
-    "users = [\"jzxcd\"]\n",
+    "users = [\"jzxcd\"]  # github account id\n",
     "start_of_week = \"2024-10-21\"\n",
-    "model_name = \"llama3.1\""
+    "model = \"llama3.1\" # optional if a desired model needed"
    ]
   },
   {
@@ -55,8 +55,8 @@
      "outputs_hidden": true
     },
     "ExecuteTime": {
-     "end_time": "2024-11-20T03:51:05.670123Z",
-     "start_time": "2024-11-20T03:51:05.623628Z"
+     "end_time": "2024-11-20T04:07:57.197110Z",
+     "start_time": "2024-11-20T04:07:57.173595Z"
     }
    },
    "outputs": [],
@@ -75,8 +75,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-20T03:51:39.643747Z",
-     "start_time": "2024-11-20T03:51:10.264593Z"
+     "end_time": "2024-11-20T04:08:02.407122Z",
+     "start_time": "2024-11-20T04:07:57.198020Z"
     }
    },
    "outputs": [
@@ -84,17 +84,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[32m2024-11-19 19:51:10.266\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.weekly_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m38\u001B[0m - \u001B[1mSummarizing perfeed for ['jzxcd'] from 2024-10-21 00:00:00-07:00 to 2024-10-27 00:00:00-07:00\u001B[0m\n",
-      "\u001B[32m2024-11-19 19:51:11.055\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.weekly_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m48\u001B[0m - \u001B[1mSummarizing the following PR-[14, 13]\u001B[0m\n",
-      "\u001B[32m2024-11-19 19:51:11.056\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.pr_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m29\u001B[0m - \u001B[1mSummarizing perfeed#14\u001B[0m\n",
-      "\u001B[32m2024-11-19 19:51:11.069\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.pr_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m29\u001B[0m - \u001B[1mSummarizing perfeed#13\u001B[0m\n",
-      "\u001B[32m2024-11-19 19:51:33.406\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.weekly_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m62\u001B[0m - \u001B[1mSummarized 2 PRs in 23.13765 seconds\u001B[0m\n"
+      "\u001B[32m2024-11-19 20:07:57.198\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.weekly_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m38\u001B[0m - \u001B[1mSummarizing perfeed for ['jzxcd'] from 2024-10-21 00:00:00-07:00 to 2024-10-27 00:00:00-07:00\u001B[0m\n",
+      "\u001B[32m2024-11-19 20:07:58.071\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.weekly_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m48\u001B[0m - \u001B[1mSummarizing the following PR-[14, 13]\u001B[0m\n",
+      "\u001B[32m2024-11-19 20:07:58.073\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.pr_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m29\u001B[0m - \u001B[1mSummarizing perfeed#14\u001B[0m\n",
+      "\u001B[32m2024-11-19 20:07:58.086\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.pr_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m50\u001B[0m - \u001B[1mLoaded perfeed#14 from store\u001B[0m\n",
+      "\u001B[32m2024-11-19 20:07:58.087\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.pr_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m29\u001B[0m - \u001B[1mSummarizing perfeed#13\u001B[0m\n",
+      "\u001B[32m2024-11-19 20:07:58.091\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.pr_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m50\u001B[0m - \u001B[1mLoaded perfeed#13 from store\u001B[0m\n",
+      "\u001B[32m2024-11-19 20:07:58.092\u001B[0m | \u001B[1mINFO    \u001B[0m | \u001B[36mperfeed.tools.weekly_summarizer\u001B[0m:\u001B[36mrun\u001B[0m:\u001B[36m62\u001B[0m - \u001B[1mSummarized 2 PRs in 0.89343 seconds\u001B[0m\n"
      ]
     },
     {
      "data": {
       "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "This week, the team merged 2 PRs focused on enhancements to the data storage and PR summarization functionalities.\n\nOverview:\n- The first PR introduced a new data storage system that supports both Feather and SQL databases, allowing for the saving and loading of PR summaries with validation and dataframe conversion capabilities. The second PR enhanced the `pr_summarizer` by implementing asynchronous execution and improving JSON output formatting.\n\n---\n\nSignificant Changes:\n- **Data Storage Enhancement**: \n  - Introduced a new base storage class and specific handlers for Feather and SQL databases.\n  - Added functionality for saving and loading PR summaries, along with a new data model for PR summary metadata.\n- **PR Summarizer Enhancement**: \n  - Updated the `PRSummarizer` class to support asynchronous execution.\n  - Improved JSON output handling through the introduction of a new utility function.\n\n---\n\nRefactors/Architecture:\n- Created an abstract base class for storage handlers, enhancing the modularity of the data storage system.\n- Restructured utility functions in the `pr_summarizer` to include a dedicated JSON output curator, improving code organization and clarity.\n\n---\n\nReview Process:\n- In the first PR, discussions arose regarding the async nature of the `run` method, leading to clarifications on its implementation. Additionally, the necessity of the `PRSummaryMetadata` class was questioned, but no immediate action was required as documentation was suggested.\n- The second PR did not have any comments or discussions, indicating a smooth review process.\n- Both PRs were merged after addressing feedback, showcasing effective collaboration and timely integration of enhancements."
+      "text/markdown": "This week, the team merged 2 PRs focused on enhancing the data storage capabilities of the application.\n\nOverview:\n- Both PRs introduced a new data storage system that supports both Feather and SQL databases. The implementation includes functionality for saving and loading PR summaries, validation, and dataframe conversion capabilities. A base storage class and specific handlers for each storage type were also created.\n\nSignificant Changes:\n- Introduced a new data storage system with:\n  - **BaseStorage class**: An abstract base class for storage handlers with validation logic.\n  - **FeatherStorage class**: A handler for Feather format with save and load methods.\n  - **SQLStorage class**: A handler for SQL databases with save and load methods.\n  - Enhanced the PR summarizer to return both PR summary and metadata.\n\nRefactors/Architecture:\n- Created an initialization file for the data stores module.\n- Updated the PR summarizer to accommodate the new data model for PR summary metadata.\n\nReview Process:\n- Discussions included the necessity of keeping the async nature of the run method, with suggestions from chihangwang and clarifications provided by jzxcd regarding the PR summarizer's functionality.\n- There was an inquiry about the purpose of the PRSummaryMetadata class, which was clarified, leading to no immediate action but a suggestion for improved documentation.\n- The necessity of the provider attribute in the OllamaClient was debated, resulting in a decision to retain it for tracking model iterations.\n- Both PRs were merged after addressing feedback, showcasing effective collaboration and thorough review."
      },
      "metadata": {},
      "output_type": "display_data"
