update the readme, package deps and comment

--- a/perfeed/notebooks/weekly_summary_demo.ipynb
+++ b/perfeed/notebooks/weekly_summary_demo.ipynb
@@ -1537,7 +1537,7 @@
     "\n",
     "df = df[rank==1]\n",
     "df['review_interval'] = (pd.to_datetime(df['pr_merged_at']) - pd.to_datetime(df['pr_created_at'])).dt.total_seconds() / 3600\n",
-    "df = df[df['author'] == 'jzxcd']\n",
+    "df = df[df['author'] == 'jzxcd'] # put the PR Author Name you want\n",
     "df"
    ]
   },
